--- a/Resources/Prototypes/Recipes/Crafting/improvised.yml
+++ b/Resources/Prototypes/Recipes/Crafting/improvised.yml
@@ -188,3 +188,14 @@
   icon:
     sprite: Objects/Weapons/Guns/Battery/emitter_cannon.rsi
     state: icon
+
+- type: construction
+  name: Chainsaw
+  id: chainsaw
+  graph: ChainsawGraph
+  startNode: start
+  targetNode: chainsaw
+  category: construction-category-weapons
+  description: "chainsaw"
+  icon: { sprite: Objects/Weapons/Melee/chainsaw.rsi, state: icon }
+  objectType: Item
