--- a/Resources/Prototypes/Entities/Objects/Tools/welders.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/welders.yml
@@ -65,6 +65,9 @@
     price: 40
   - type: IgnitionSource
     temperature: 700
+  - type: Tag
+    tags: 
+    - Welder
 
 - type: entity
   name: industrial welding tool
