--- a/Resources/Prototypes/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/Catalog/uplink_catalog.yml
@@ -86,6 +86,16 @@
   - UplinkWeapons
 
 - type: listing
+  id: UplinkBowCompoundRed
+  name: uplink-bow-compound-red-name
+  description: uplink-bow-compound-red-desc
+  productEntity: BowCompoundRed
+  cost:
+    Telecrystal: 8
+  categories:
+  - UplinkWeapons
+
+- type: listing
   id: UplinkEswordDouble
   name: uplink-esword-double-name
   description: uplink-esword-double-desc
@@ -274,6 +284,17 @@
   productEntity: MagazinePistolHighCapacity
   cost:
     Telecrystal: 2
+  categories:
+  - UplinkAmmo
+
+- type: listing
+  id: UplinkQuiverCompositFilled
+  name: uplink-quiver-composit-filled-name
+  description: uplink-quiver-composit-filled-desc
+  icon: { sprite: Clothing/Belt/quiver.rsi, state: icon }
+  productEntity: ClothingBeltQuiverCompositFilled
+  cost:
+    Telecrystal: 10
   categories:
   - UplinkAmmo
 
@@ -828,6 +849,17 @@
   productEntity: ClothingBackpackDuffelSyndicateFilledRifle
   cost:
     Telecrystal: 17
+  categories:
+  - UplinkBundles
+
+- type: listing
+  id: UplinkBowBundle
+  name: uplink-bow-bundle-name
+  description: uplink-bow-bundle-desc
+  icon: { sprite: /Textures/Objects/Weapons/Guns/Bow/compoundbow.rsi, state: unwieldedred }
+  productEntity: ClothingBackpackDuffelSyndicateFilledBow
+  cost:
+    Telecrystal: 16
   categories:
   - UplinkBundles
 
