--- a/Resources/Prototypes/Entities/Objects/Weapons/Bombs/plastic.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Bombs/plastic.yml
@@ -21,6 +21,9 @@
     startOnStick: true
     canToggleStartOnStick: true
   - type: TriggerOnSignal
+  - type: Tag
+    tags:
+    - C4
   - type: DeviceLinkSink
     ports:
       - Trigger
