--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -622,6 +622,9 @@
       - WeaponLaserCannon
       - WeaponXrayCannon
       - WeaponTaser
+      - BowCompound
+      - ArrowCompound
+      - ClothingBeltQuiverComposit
   - type: MaterialStorage
     whitelist:
       tags:
