Remove mechanoids from uplink until nerfed

--- a/Resources/Prototypes/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/Catalog/uplink_catalog.yml
@@ -1597,34 +1597,34 @@
   categories:
   - UplinkWeapons
 
-- type: listing
-  id: UplinkSyndicateMauler
-  name: uplink-mauler-name
-  description: uplink-mauler-desc 
-  icon: { sprite: /Textures/Objects/Specific/Mech/mecha.rsi, state: mauler }
-  productEntity: MechMaulerReal
-  cost:
-    Telecrystal: 120
-  categories:
-  - UplinkWeapons
-  conditions:
-  - !type:BuyerWhitelistCondition
-    blacklist:
-      components:
-      - SurplusBundle
+#- type: listing
+#  id: UplinkSyndicateMauler
+#  name: uplink-mauler-name
+#  description: uplink-mauler-desc 
+#  icon: { sprite: /Textures/Objects/Specific/Mech/mecha.rsi, state: mauler }
+#  productEntity: MechMaulerReal
+#  cost:
+#    Telecrystal: 120
+#  categories:
+#  - UplinkWeapons
+#  conditions:
+#  - !type:BuyerWhitelistCondition
+#    blacklist:
+#      components:
+#      - SurplusBundle
 
-- type: listing
-  id: UplinkSyndicateGygax
-  name: uplink-gygax-syndie-name
-  description: uplink-gygax-desc
-  icon: { sprite: /Textures/Objects/Specific/Mech/mecha.rsi, state: darkgygax }
-  productEntity: MechDarkGygax
-  cost:
-    Telecrystal: 70
-  categories:
-  - UplinkWeapons
-  conditions:
-  - !type:BuyerWhitelistCondition
-    blacklist:
-      components:
-      - SurplusBundle
+#- type: listing
+#  id: UplinkSyndicateGygax
+#  name: uplink-gygax-syndie-name
+#  description: uplink-gygax-desc
+#  icon: { sprite: /Textures/Objects/Specific/Mech/mecha.rsi, state: darkgygax }
+#  productEntity: MechDarkGygax
+#  cost:
+#    Telecrystal: 70
+#  categories:
+#  - UplinkWeapons
+#  conditions:
+#  - !type:BuyerWhitelistCondition
+#    blacklist:
+#      components:
+#      - SurplusBundle
