Nerf ammo prices and add Saiga magazine recipe

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/caseless_rifle.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/caseless_rifle.yml
@@ -19,7 +19,7 @@
   - type: Appearance
   - type: SpentAmmoVisuals
   - type: StaticPrice
-    price: 10
+    price: 1
 
 - type: entity
   id: CartridgeCaselessRifle
@@ -53,6 +53,7 @@
     - state: rubber
       map: ["enum.AmmoVisualLayers.Base"]
 
+# Blueshield ammo 12.7
 - type: entity
   id: BaseCartridgeUniversal
   name: cartridge (12.7 rifle)
@@ -74,7 +75,7 @@
   - type: Appearance
   - type: SpentAmmoVisuals
   - type: StaticPrice
-    price: 10
+    price: 1
 
 - type: entity
   id: CartridgeCaselessUniversalPT1
@@ -83,10 +84,6 @@
   components:
   - type: CartridgeAmmo
     proto: BulletUniversalPT1
-  - type: Sprite
-    layers:
-    - state: base
-      map: ["enum.AmmoVisualLayers.Base"]
 
 - type: entity
   id: CartridgeCaselessUniversalVPS
