--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -580,6 +580,7 @@
       - MagazineLightRifle
       - MagazineBoxPistol
       - MagazineBoxPistolUranium
+      - MagazineShotgunSaiga
       - MagazineUniversalShortHv
       - MagazineUniversal
       - SpeedLoaderUniversal
