chainsaw sound fix (#282)

--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/chainsaw.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/chainsaw.yml
@@ -14,8 +14,12 @@
     litDisarmMalus: 0.6
     activateSound: !type:SoundPathSpecifier
       path: /Audio/Weapons/chainsaw_start.ogg
+      params:
+        volume: +4
     deActivateSound: !type:SoundPathSpecifier
       path: /Audio/Weapons/chainsaw_stop.ogg
+      params:
+        volume: +4
   - type: Sprite
     sprite:  Objects/Weapons/Melee/chainsaw.rsi
     layers:
