--- a/Resources/ConfigPresets/WizardsDen/wizardsDen.toml
+++ b/Resources/ConfigPresets/WizardsDen/wizardsDen.toml
@@ -10,7 +10,7 @@ soft_max_players = 130
 bug_report = "https://github.com/space-wizards/space-station-14/issues/new/choose"
 discord    = "https://discord.spacestation14.io"
 forum      = "https://forum.spacestation14.io"
-github     = "https://github.com/space-wizards/space-station-14"
+gitlab     = "https://github.com/space-wizards/space-station-14"
 patreon    = "https://www.patreon.com/spacestation14"
 website    = "https://spacestation14.io"
 wiki       = "https://wiki.spacestation14.io"
