RD new tools (#267)
* RD new tools

* admeme

* ftl changes

* Squashed commit of the following:

commit d8519d4a239c6f358c1bdd3575b1702b7dfbf0ea
Author: AruMoon <anton17082003@gmail.com>
Date:   Sat Oct 7 22:55:55 2023 +0000

    Automatic changelog update

commit cb4b2cc7825dba58b27feaf6917668f91898b8e4
Author: Ratyyy <138193222+Ratyyy@users.noreply.github.com>
Date:   Sun Oct 8 01:55:26 2023 +0300

    chainsaw sound fix (#282)

commit c974ad3a48b944be220d176e907222184049b18c
Author: Tenteratus <143085120+Tenteratus@users.noreply.github.com>
Date:   Sat Oct 7 05:24:10 2023 +0300

    Driller station update 7 (#283)

    * Driller station

    * Update Driller

    Driller Station

    * Add Driller in Map test

    * Update Driller Station 2

    добавлены спавны позднего присоединения

    * Driller update 3

    * Add additional arilocks to prevent global spacing

    * Update №4

    исправлены множественные ошибки: убраны спавнеры большинства мобов, исправлена ошибка с дверью в РНД, добавлена раковина на кухню и т.д.

    * Update 5

    * Update 5

    * Update 5.1 (fix)

    * Update 5.2

    * Driller Update 6

    * Update Driller 6.1

    Были внесены мелкие изменения и исправлены ошибки.

    * Udate Driller 8

    финальное (как я надеюсь) обновление с фиксами проблем

    ---------

    Co-authored-by: MilenVolf <milen.volf@gmail.com>

commit e197fafc5c56b72fb0a9c7b6d50cc2b7cd99e9dc
Author: MilenVolf <milen.volf@gmail.com>
Date:   Sat Oct 7 05:00:56 2023 +0300

    Nerf ammo prices and add Saiga magazine recipe

commit 10818f85d0f940fbdfad517a2668a132325658cf
Author: MilenVolf <milen.volf@gmail.com>
Date:   Fri Oct 6 13:44:59 2023 +0300

    Get traitor alert back

commit c17ecbeff70c484347bb7300cb401ff3c5c55012
Author: MilenVolf <milen.volf@gmail.com>
Date:   Fri Oct 6 13:42:56 2023 +0300

    Remove Felinid bang & some fixes

commit 740682a14fc234321fdd7d0fc6663294

--- a/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
@@ -124,6 +124,20 @@
       - id: WeaponRevolverRsh18
 
 - type: entity
+  parent: BriefcaseRD
+  id: BriefcaseRDFilled
+  name: case with rd tools
+  description: Full of useful tools
+  components:
+  - type: StorageFill
+    contents:
+      - id: WeaponPistolCHIMP
+      - id: AnomalyLocator
+#     - id: PinpointerAnomaly
+      - id: AnomalyScannerRD
+      - id: HandTeleporter
+
+- type: entity
   parent: WeaponcaseBlueShield
   id: WeaponCaseSaiga
   name: KR51 bundle
