--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -222,7 +222,7 @@
       - id: CircuitImprinterMachineCircuitboard
       - id: ClothingHeadsetMedicalScience
       - id: ClothingOuterHardsuitRd
-      - id: HandTeleporter
+      - id: BriefcaseRDFilled
       - id: DoorRemoteResearch
       - id: ClothingBeltUtilityFilled
       - id: RubberStampRd
@@ -241,7 +241,7 @@
       - id: ProtolatheMachineCircuitboard
       - id: CircuitImprinterMachineCircuitboard
       - id: ClothingHeadsetMedicalScience
-      - id: HandTeleporter
+      - id: BriefcaseRDFilled
       - id: DoorRemoteResearch
       - id: HandheldRndMonitor
       - id: ClothingBeltUtilityFilled
