--- a/Resources/Prototypes/Entities/Objects/Misc/briefcases.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/briefcases.yml
@@ -54,6 +54,21 @@
 - type: entity
   name: brown briefcase
   parent: BriefcaseSyndieBase
+  id: BriefcaseRD
+  description: A handy briefcase.
+  components:
+  - type: Sprite
+    sprite: Objects/Storage/Briefcases/rd_case.rsi
+    state: icon
+  - type: Item
+    sprite: Objects/Storage/Briefcases/rd_case.rsi
+  - type: Storage
+    storageOpenSound:
+      collection: WeaponCaseOpen
+
+- type: entity
+  name: brown briefcase
+  parent: BriefcaseSyndieBase
   id: WeaponcaseBlueShield
   description: A handy briefcase.
   components:
